--- a/app/ui/templates/index.html
+++ b/app/ui/templates/index.html
@@ -44,6 +44,25 @@
             border-radius: 7px;
             margin-left: 20px;
         }
+        .dropdown{
+            width: 100%;
+            padding:10px;
+        }
+
+        @media screen and (max-width:600px) {
+            .question {
+                margin-top: 20px;
+                padding: 10px;
+                width: 80%;
+                margin-left: 20px;
+            }
+
+            .main {
+                padding: 2%;
+                margin-top: 150px;
+            }
+
+        }
     </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -78,7 +97,7 @@
                 <div class="question card">
                     <h3>What is your current occupation?</h3>
                     <div class="form-group">
-                        <select name="occupation" id="occupation" class="form-control">
+                        <select name="occupation" id="occupation" class="dropdown">
                             <option value="doctor">Doctor</option>
                             <option value="lawyer">Lawyer</option>
                             <option value="engineer">Engineer</option>
@@ -86,12 +105,17 @@
                     </div>
                 </div>
                 <div class="question card">
-                    <h3>Where you vaccinated?</h3>
+                    <h3>Were you vaccinated?</h3>
+                    <select name="vaccination_status" id="vaccination_status" class="dropdown">
+                        <option value="yes">yes</option>
+                        <option value="no">no</option>
+                    </select>
+                </div>
+                <div class="question card">
+                    <h3>When were you vaccinated?</h3>
                     <div class="form-group">
-                        <input type="checkbox" id="yes" name="vacc_yes" value="Bike">
-                        <label for="yes">Yes</label><br>
-                        <input type="checkbox" id="no" name="vacc_no" value="Car">
-                        <label for="no">No</label><br>
+                        <input type="datetime" name="vaccination_date" id="vaccination_date" class="form-control"
+                            placeholder="e.g Pfizer">
                     </div>
                 </div>
                 <div class="question card">
